# PJC2023

./: CMakeLists.txt  main.cpp
box-print/: README.md  box-print.cpp
correct-sudoku/: README.md  correct-sudoku.cpp
refactoring-using-lambdas-and-algorithms/: README.md  refactoring-using-lambdas-and-algorithms.cpp
reversing-words-in-text/: README.md  reversing-words-in-text.cpp
